<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/_1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="1dp"
        android:text="@string/_2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="1dp"
        android:text="@string/_5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/_10" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        android:text="@string/reset" />




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="3dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/required_amount"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/TEXT2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="40dp"
        android:text="@string/amount_paid"
        android:textSize="20sp"
        />
    <EditText

        android:id="@+id/edittext"

        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="1dp"
        android:hint="@string/enter_the_amount"
        android:inputType="number"
        />
</LinearLayout>
